Fix reponsive and horizontal scroll

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -2,3 +2,13 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 667px) {
+    body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
+}
